// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the LmsTable renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    fellow={Object {}}
    lmsSubmissions={Array []}
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <TableHeader
                              headers={
                                        Array [
                                                  "Course Id",
                                                  "Output Name",
                                                  "Due Date",
                                                  "Submission Date",
                                                  "Review Date",
                                                  "Resubmitted",
                                                  "Score",
                                                ]
                              }
                    />
          </Table>
</div>,
        <Loader
          size=""
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                        }
            />
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                }
/>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Course Id",
                  "Output Name",
                  "Due Date",
                  "Submission Date",
                  "Review Date",
                  "Resubmitted",
                  "Score",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "size": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <TableHeader
                                    headers={
                                                Array [
                                                            "Course Id",
                                                            "Output Name",
                                                            "Due Date",
                                                            "Submission Date",
                                                            "Review Date",
                                                            "Resubmitted",
                                                            "Score",
                                                          ]
                                    }
                        />
            </Table>
</div>,
          <Loader
            size=""
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <TableHeader
                            headers={
                                          Array [
                                                        "Course Id",
                                                        "Output Name",
                                                        "Due Date",
                                                        "Submission Date",
                                                        "Review Date",
                                                        "Resubmitted",
                                                        "Score",
                                                      ]
                            }
              />
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader
                  headers={
                                    Array [
                                                      "Course Id",
                                                      "Output Name",
                                                      "Due Date",
                                                      "Submission Date",
                                                      "Review Date",
                                                      "Resubmitted",
                                                      "Score",
                                                    ]
                  }
/>,
                Array [],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "headers": Array [
                    "Course Id",
                    "Output Name",
                    "Due Date",
                    "Submission Date",
                    "Review Date",
                    "Resubmitted",
                    "Score",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "size": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`tests the LmsTable renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    attempts={1}
    fellow={
        Object {
            "actualApprenticeshipStartDate": "2019-03-18",
            "actualSimulationsCompletionDate": "2019-03-15",
            "apprenticeshipManager": "Trust Birungi",
            "apprenticeshipTeam": "Watch Tower",
            "apprenticeshipTechnology": "JavaScript,  PHP/Laravel,  ReactJS,  Eloquent",
            "bio": "Sed quo voluptatum ducimus sunt labore eos totam. Sit corporis est voluptates commodi occaecati. Modi harum assumenda quod voluptatem.",
            "cohort": "Class 13 - KLA",
            "currentStage": "Apprentice",
            "email": "stanton.rogahn@andela.com",
          }
    }
    lmsSubmissions={Array []}
    loading={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <TableHeader
                              headers={
                                        Array [
                                                  "Course Id",
                                                  "Output Name",
                                                  "Due Date",
                                                  "Submission Date",
                                                  "Review Date",
                                                  "Resubmitted",
                                                  "Score",
                                                ]
                              }
                    />
          </Table>
</div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                        }
            />
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                }
/>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Course Id",
                  "Output Name",
                  "Due Date",
                  "Submission Date",
                  "Review Date",
                  "Resubmitted",
                  "Score",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <TableHeader
                                    headers={
                                                Array [
                                                            "Course Id",
                                                            "Output Name",
                                                            "Due Date",
                                                            "Submission Date",
                                                            "Review Date",
                                                            "Resubmitted",
                                                            "Score",
                                                          ]
                                    }
                        />
            </Table>
</div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <TableHeader
                            headers={
                                          Array [
                                                        "Course Id",
                                                        "Output Name",
                                                        "Due Date",
                                                        "Submission Date",
                                                        "Review Date",
                                                        "Resubmitted",
                                                        "Score",
                                                      ]
                            }
              />
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader
                  headers={
                                    Array [
                                                      "Course Id",
                                                      "Output Name",
                                                      "Due Date",
                                                      "Submission Date",
                                                      "Review Date",
                                                      "Resubmitted",
                                                      "Score",
                                                    ]
                  }
/>,
                Array [],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "headers": Array [
                    "Course Id",
                    "Output Name",
                    "Due Date",
                    "Submission Date",
                    "Review Date",
                    "Resubmitted",
                    "Score",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`tests the LmsTable renders correctly 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    fellow={
        Object {
            "actualApprenticeshipStartDate": "2019-03-18",
            "actualSimulationsCompletionDate": "2019-03-15",
            "apprenticeshipManager": "Trust Birungi",
            "apprenticeshipTeam": "Watch Tower",
            "apprenticeshipTechnology": "JavaScript,  PHP/Laravel,  ReactJS,  Eloquent",
            "bio": "Sed quo voluptatum ducimus sunt labore eos totam. Sit corporis est voluptates commodi occaecati. Modi harum assumenda quod voluptatem.",
            "cohort": "Class 13 - KLA",
            "currentStage": "Apprentice",
            "email": "stanton.rogahn@andela.com",
          }
    }
    lmsSubmissions={
        Array [
            Object {},
          ]
    }
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="lms-table"
>
          <Table>
                    <TableHeader
                              headers={
                                        Array [
                                                  "Course Id",
                                                  "Output Name",
                                                  "Due Date",
                                                  "Submission Date",
                                                  "Review Date",
                                                  "Resubmitted",
                                                  "Score",
                                                ]
                              }
                    />
                    <LmsRow
                              lmsSubmission={Object {}}
                    />
          </Table>
</div>,
        <Loader
          size=""
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                        }
            />
            <LmsRow
                        lmsSubmission={Object {}}
            />
</Table>,
          "className": "lms-table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Course Id",
                                                "Output Name",
                                                "Due Date",
                                                "Submission Date",
                                                "Review Date",
                                                "Resubmitted",
                                                "Score",
                                              ]
                }
/>,
              Array [
                <LmsRow
                  lmsSubmission={Object {}}
/>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Course Id",
                  "Output Name",
                  "Due Date",
                  "Submission Date",
                  "Review Date",
                  "Resubmitted",
                  "Score",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "weak-key-2",
              "nodeType": "function",
              "props": Object {
                "lmsSubmission": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "size": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="lms-table"
>
            <Table>
                        <TableHeader
                                    headers={
                                                Array [
                                                            "Course Id",
                                                            "Output Name",
                                                            "Due Date",
                                                            "Submission Date",
                                                            "Review Date",
                                                            "Resubmitted",
                                                            "Score",
                                                          ]
                                    }
                        />
                        <LmsRow
                                    lmsSubmission={Object {}}
                        />
            </Table>
</div>,
          <Loader
            size=""
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Table>
              <TableHeader
                            headers={
                                          Array [
                                                        "Course Id",
                                                        "Output Name",
                                                        "Due Date",
                                                        "Submission Date",
                                                        "Review Date",
                                                        "Resubmitted",
                                                        "Score",
                                                      ]
                            }
              />
              <LmsRow
                            lmsSubmission={Object {}}
              />
</Table>,
            "className": "lms-table",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <TableHeader
                  headers={
                                    Array [
                                                      "Course Id",
                                                      "Output Name",
                                                      "Due Date",
                                                      "Submission Date",
                                                      "Review Date",
                                                      "Resubmitted",
                                                      "Score",
                                                    ]
                  }
/>,
                Array [
                  <LmsRow
                    lmsSubmission={Object {}}
/>,
                ],
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "headers": Array [
                    "Course Id",
                    "Output Name",
                    "Due Date",
                    "Submission Date",
                    "Review Date",
                    "Resubmitted",
                    "Score",
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "weak-key-2",
                "nodeType": "function",
                "props": Object {
                  "lmsSubmission": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "size": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`tests the LmsTable renders correctly 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LmsTable
    fellow={
        Object {
            "actualApprenticeshipStartDate": "2019-03-18",
            "actualSimulationsCompletionDate": "2019-03-15",
            "apprenticeshipManager": "Trust Birungi",
            "apprenticeshipTeam": "Watch Tower",
            "apprenticeshipTechnology": "JavaScript,  PHP/Laravel,  ReactJS,  Eloquent",
            "bio": "Sed quo voluptatum ducimus sunt labore eos totam. Sit corporis est voluptates commodi occaecati. Modi harum assumenda quod voluptatem.",
            "cohort": "Class 13 - KLA",
            "currentStage": "Apprentice",
            "email": "stanton.rogahn@andela.com",
          }
    }
    lmsSubmissions={null}
    loading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "customStyle": Object {},
      "message": "There's currently no LMS data for this fellow",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "customStyle": Object {},
        "message": "There's currently no LMS data for this fellow",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
